--- a/PD-05/index.html
+++ b/PD-05/index.html
@@ -14,7 +14,7 @@
   <div class="container">
     <div class="topnav">
       <a href="#Testen">Laten Testen</a>
-      <a href="patient.html">Patient worden</a>
+      <a href="Patient.html">Patient worden</a>
       <a href="#Home">Home</a>
     </div>
   </div>
