--- a/PD-05/Patient.html
+++ b/PD-05/Patient.html
@@ -14,7 +14,7 @@
   <div class="container">
     <div class="topnav">
       <a href="#home">Laten Testen</a>
-      <a href="patient.html">Patient worden</a>
+      <a href="Patient.html">Patient worden</a>
       <a href="#contact">Home</a>
     </div>
   </div>
