--- a/PD-05/Patient.html
+++ b/PD-05/Patient.html
@@ -13,7 +13,7 @@
  <div class="bg-img">
   <div class="container">
     <div class="topnav">
-      <a href="#home">Laten Testen</a>
+      <a href="index.html">Laten Testen</a>
       <a href="Patient.html">Patient worden</a>
       <a href="#contact">Home</a>
     </div>
