--- a/PD-05/index.html
+++ b/PD-05/index.html
@@ -15,7 +15,7 @@
     <div class="topnav">
       <a href="#Testen">Laten Testen</a>
       <a href="Patient.html">Patient worden</a>
-      <a href="#Home">Home</a>
+      <a href="index.html">Home</a>
     </div>
   </div>
 </div>
