--- a/PD-05/Patient.html
+++ b/PD-05/Patient.html
@@ -13,9 +13,9 @@
  <div class="bg-img">
   <div class="container">
     <div class="topnav">
-      <a href="index.html">Laten Testen</a>
+      <a href="#contact">Laten Testen</a>
       <a href="Patient.html">Patient worden</a>
-      <a href="#contact">Home</a>
+      <a href="index.html">Home</a>
     </div>
   </div>
 </div>
