--- a/PD-05/Patient.html
+++ b/PD-05/Patient.html
@@ -35,7 +35,9 @@
                 <input type="number" id="patientAge" name="patientAge"><br><br>
 				<label for="hasFever">Koorts:</label>
 				<input type="checkbox" id="hasFever"checked="checked" /><br><br>
-                <button value="patientName,patientAge,hasFever" type="button" onClick='createPatient()'>Maak nu aan</button> 
+                <p id="newPatient"></p>
+            <button type="button" value="patientName,patientAge,hasFever" onClick='createPatient()'>Maak
+              nu aan</button>
               </div>
 </body>
 </html>
